Icon links working (fixed layout bug)

--- a/src/style.css
+++ b/src/style.css
@@ -23,9 +23,10 @@ body {
   position: absolute;
   z-index: 1;
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   display: grid;
-  place-content: center;
+  place-content: center end;
+  top: 10vh;
 }
 
 .subcontainer {
